Bug 590742 - Incorporate new CSS for Tab Candy appearance polish [r+a=dietrich]
UltraBlame original commit: d0394b66e5d3d53e78559016a914373e27c4d046

--- a/browser/themes/pinstripe/browser/tabview/tabview.css
+++ b/browser/themes/pinstripe/browser/tabview/tabview.css
@@ -26,7 +26,7 @@ rgba
 0
 0
 .
-4
+6
 )
 ;
 font
@@ -72,29 +72,12 @@ padding
 6px
 4px
 ;
-border
-:
-1px
-solid
-rgba
-(
-230
-230
-230
-1
-)
-;
 background
 -
 color
 :
-rgba
-(
-245
-245
-245
-1
-)
+#
+D7D7D7
 ;
 -
 moz
@@ -114,7 +97,23 @@ box
 -
 shadow
 :
-inset
+0
+1px
+2px
+rgba
+(
+0
+0
+0
+0
+.
+4
+)
+;
+border
+:
+1px
+solid
 rgba
 (
 255
@@ -122,12 +121,8 @@ rgba
 255
 0
 .
-6
+5
 )
-0
-0
-0
-2px
 ;
 cursor
 :
@@ -135,7 +130,7 @@ pointer
 ;
 margin
 :
-4px
+8px
 ;
 }
 .
@@ -157,21 +152,23 @@ rgba
 0
 0
 .
-2
+3
 )
 ;
 }
 .
 thumb
+{
+-
+moz
+-
+box
 -
 shadow
-{
-border
--
-bottom
 :
-5px
-solid
+1px
+2px
+0
 rgba
 (
 0
@@ -179,26 +176,8 @@ rgba
 0
 0
 .
-05
+2
 )
-;
-margin
--
-right
-:
--
-12px
-;
-bottom
-:
-2px
-;
-width
-:
-94
-.
-5
-%
 ;
 }
 .
@@ -208,13 +187,8 @@ background
 -
 color
 :
-rgba
-(
-245
-245
-245
-1
-)
+#
+D7D7D7
 ;
 -
 moz
@@ -236,34 +210,34 @@ box
 -
 shadow
 :
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
 0
 -
-2px
-0px
-inset
+1px
+0
 rgba
 (
-255
-255
-255
+225
+225
+225
 0
 .
-6
+8
 )
+inset
 -
-2px
-0px
-0px
+1px
+0
+0
+rgba
+(
+225
+225
+225
+0
+.
+8
+)
+inset
 ;
 padding
 :
@@ -293,7 +267,7 @@ rgba
 0
 0
 .
-2
+3
 )
 ;
 border
@@ -309,16 +283,16 @@ rgba
 0
 0
 .
-2
+3
 )
 ;
 height
 :
-17px
+16px
 ;
 width
 :
-17px
+16px
 ;
 }
 .
@@ -357,12 +331,6 @@ height
 :
 16px
 ;
-opacity
-:
-0
-.
-2
-;
 background
 :
 url
@@ -385,17 +353,44 @@ no
 -
 repeat
 ;
-}
-.
-close
+-
+moz
+-
+transition
+-
+property
 :
-hover
-{
+opacity
+;
+-
+moz
+-
+transition
+-
+duration
+:
+0
+.
+5s
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+ease
+-
+out
+;
 opacity
 :
-1
-.
 0
+.
+2
 ;
 }
 .
@@ -403,7 +398,7 @@ expander
 {
 bottom
 :
-6px
+8px
 ;
 right
 :
@@ -439,6 +434,39 @@ no
 -
 repeat
 ;
+-
+moz
+-
+transition
+-
+property
+:
+opacity
+;
+-
+moz
+-
+transition
+-
+duration
+:
+0
+.
+5s
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+ease
+-
+out
+;
 opacity
 :
 0
@@ -447,10 +475,47 @@ opacity
 ;
 }
 .
+close
+:
+hover
+.
 expander
 :
 hover
 {
+-
+moz
+-
+transition
+-
+property
+:
+opacity
+;
+-
+moz
+-
+transition
+-
+duration
+:
+0
+.
+5s
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+ease
+-
+out
+;
 opacity
 :
 1
@@ -488,10 +553,10 @@ tab
 -
 title
 {
-top
+bottom
 :
-100
-%
+-
+20px
 ;
 text
 -
@@ -515,6 +580,22 @@ nowrap
 overflow
 :
 hidden
+;
+text
+-
+shadow
+:
+0
+1px
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
 ;
 }
 .
@@ -606,6 +687,8 @@ important
 ;
 }
 .
+tab
+.
 focus
 {
 -
@@ -615,20 +698,29 @@ box
 -
 shadow
 :
+0
+0
+8px
+-
+moz
+-
+mac
+-
+menuselect
+;
+border
+:
+1px
+solid
 rgba
 (
-54
-79
-225
-1
+255
+255
+255
+0
+.
+6
 )
-0px
-0px
-5px
--
-1px
-!
-important
 ;
 }
 .
@@ -664,6 +756,23 @@ none
 .
 front
 .
+thumb
+{
+-
+moz
+-
+box
+-
+shadow
+:
+none
+!
+important
+;
+}
+.
+front
+.
 focus
 {
 -
@@ -677,14 +786,16 @@ none
 !
 important
 ;
+border
+:
+none
+!
+important
+;
 }
 .
 tabInGroupItem
 {
-border
-:
-none
-;
 -
 moz
 -
@@ -693,8 +804,31 @@ box
 shadow
 :
 none
-!
-important
+;
+border
+-
+color
+:
+transparent
+;
+background
+-
+color
+:
+transparent
+;
+}
+.
+tabInGroupItem
+.
+favicon
+{
+background
+-
+color
+:
+#
+EBEBEB
 ;
 }
 .
@@ -704,29 +838,12 @@ cursor
 :
 move
 ;
-border
-:
-1px
-solid
-rgba
-(
-230
-230
-230
-1
-)
-;
 background
 -
 color
 :
-rgba
-(
-248
-248
-248
-1
-)
+#
+EBEBEB
 ;
 -
 moz
@@ -746,32 +863,32 @@ box
 -
 shadow
 :
-inset
+0
+1px
+4px
 rgba
 (
-255
-255
-255
+0
+0
+0
 0
 .
 6
 )
-0
-0
-0
-2px
+;
+border
+:
+1px
+solid
 rgba
 (
-0
-0
-0
+255
+255
+255
 0
 .
-2
+5
 )
-1px
-1px
-4px
 ;
 }
 .
@@ -809,10 +926,12 @@ border
 solid
 rgba
 (
-190
-190
-190
-1
+255
+255
+255
+0
+.
+5
 )
 ;
 }
