--- a/browser/themes/winstripe/browser/tabview/tabview.css
+++ b/browser/themes/winstripe/browser/tabview/tabview.css
@@ -1,11 +1,5 @@
 body
 {
-background
--
-color
-:
-transparent
-;
 font
 -
 family
@@ -26,14 +20,14 @@ rgba
 0
 0
 .
-4
+6
 )
 ;
 font
 -
 size
 :
-12px
+13px
 ;
 line
 -
@@ -47,6 +41,28 @@ bg
 {
 background
 :
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabview
+/
+grain
+.
+png
+"
+)
+repeat
+scroll
+center
+top
 -
 moz
 -
@@ -54,12 +70,18 @@ linear
 -
 gradient
 (
+center
 top
 #
-F1F5FB
+CCD9EA
 #
-EDF4FB
+C7D5E7
 )
+repeat
+scroll
+0
+0
+transparent
 ;
 }
 .
@@ -72,29 +94,12 @@ padding
 6px
 4px
 ;
-border
-:
-1px
-solid
-rgba
-(
-230
-230
-230
-1
-)
-;
 background
 -
 color
 :
-rgba
-(
-245
-245
-245
-1
-)
+#
+E0EAF5
 ;
 -
 moz
@@ -114,7 +119,16 @@ box
 -
 shadow
 :
+0
+1px
+0
+#
+FFFFFF
 inset
+0
+-
+1px
+1px
 rgba
 (
 255
@@ -122,12 +136,48 @@ rgba
 255
 0
 .
-6
+8
 )
+inset
+1px
 0
+1px
+rgba
+(
+255
+255
+255
 0
+.
+8
+)
+inset
+-
+1px
 0
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+1px
 2px
+rgba
+(
+4
+38
+60
+0
+.
+4
+)
 ;
 cursor
 :
@@ -152,26 +202,28 @@ border
 solid
 rgba
 (
-0
-0
-0
+73
+99
+119
 0
 .
-2
+3
 )
 ;
 }
 .
 thumb
+{
+-
+moz
+-
+box
 -
 shadow
-{
-border
--
-bottom
 :
-5px
-solid
+1px
+2px
+0
 rgba
 (
 0
@@ -179,26 +231,8 @@ rgba
 0
 0
 .
-05
+1
 )
-;
-margin
--
-right
-:
--
-12px
-;
-bottom
-:
-2px
-;
-width
-:
-94
-.
-5
-%
 ;
 }
 .
@@ -208,13 +242,8 @@ background
 -
 color
 :
-rgba
-(
-245
-245
-245
-1
-)
+#
+E0EAF5
 ;
 -
 moz
@@ -228,42 +257,6 @@ bottomright
 0
 .
 4em
-;
--
-moz
--
-box
--
-shadow
-:
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
-0
--
-2px
-0px
-inset
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
--
-2px
-0px
-0px
 ;
 padding
 :
@@ -288,12 +281,12 @@ right
 solid
 rgba
 (
-0
-0
-0
+73
+99
+119
 0
 .
-2
+3
 )
 ;
 border
@@ -304,12 +297,12 @@ bottom
 solid
 rgba
 (
-0
-0
-0
+73
+99
+119
 0
 .
-2
+3
 )
 ;
 height
@@ -357,12 +350,6 @@ height
 :
 16px
 ;
-opacity
-:
-0
-.
-2
-;
 background
 :
 url
@@ -385,17 +372,44 @@ no
 -
 repeat
 ;
-}
-.
-close
+-
+moz
+-
+transition
+-
+property
 :
-hover
-{
+opacity
+;
+-
+moz
+-
+transition
+-
+duration
+:
+0
+.
+5s
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+ease
+-
+out
+;
 opacity
 :
-1
-.
 0
+.
+2
 ;
 }
 .
@@ -439,6 +453,39 @@ no
 -
 repeat
 ;
+-
+moz
+-
+transition
+-
+property
+:
+opacity
+;
+-
+moz
+-
+transition
+-
+duration
+:
+0
+.
+5s
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+ease
+-
+out
+;
 opacity
 :
 0
@@ -447,10 +494,47 @@ opacity
 ;
 }
 .
+close
+:
+hover
+.
 expander
 :
 hover
 {
+-
+moz
+-
+transition
+-
+property
+:
+opacity
+;
+-
+moz
+-
+transition
+-
+duration
+:
+0
+.
+5s
+;
+-
+moz
+-
+transition
+-
+timing
+-
+function
+:
+ease
+-
+out
+;
 opacity
 :
 1
@@ -488,10 +572,10 @@ tab
 -
 title
 {
-top
+bottom
 :
-100
-%
+-
+20px
 ;
 text
 -
@@ -515,6 +599,22 @@ nowrap
 overflow
 :
 hidden
+;
+text
+-
+shadow
+:
+0
+1px
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
 ;
 }
 .
@@ -606,6 +706,8 @@ important
 ;
 }
 .
+tab
+.
 focus
 {
 -
@@ -615,20 +717,37 @@ box
 -
 shadow
 :
-rgba
-(
-54
-79
-225
-1
-)
-0px
-0px
-5px
+0
+1px
+0
+#
+FFFFFF
+inset
+0
 -
 1px
-!
-important
+1px
+#
+FFFFFF
+inset
+1px
+0
+1px
+#
+FFFFFF
+inset
+-
+1px
+0
+1px
+#
+FFFFFF
+inset
+0
+0
+8px
+#
+007ECE
 ;
 }
 .
@@ -664,6 +783,23 @@ none
 .
 front
 .
+thumb
+{
+-
+moz
+-
+box
+-
+shadow
+:
+none
+!
+important
+;
+}
+.
+front
+.
 focus
 {
 -
@@ -681,10 +817,6 @@ important
 .
 tabInGroupItem
 {
-border
-:
-none
-;
 -
 moz
 -
@@ -693,8 +825,26 @@ box
 shadow
 :
 none
-!
-important
+;
+background
+-
+color
+:
+#
+E0EAF5
+;
+}
+.
+tabInGroupItem
+.
+favicon
+{
+background
+-
+color
+:
+#
+E0EAF5
 ;
 }
 .
@@ -704,29 +854,12 @@ cursor
 :
 move
 ;
-border
-:
-1px
-solid
-rgba
-(
-230
-230
-230
-1
-)
-;
 background
 -
 color
 :
-rgba
-(
-248
-248
-248
-1
-)
+#
+E0EAF5
 ;
 -
 moz
@@ -746,32 +879,65 @@ box
 -
 shadow
 :
+0
+1px
+0
+#
+FFFFFF
 inset
+0
+-
+1px
+1px
 rgba
 (
 255
 255
 255
+0
+.
+8
+)
+inset
+1px
+0
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+-
+1px
+0
+1px
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+inset
+0
+1px
+4px
+rgba
+(
+4
+38
+60
 0
 .
 6
 )
-0
-0
-0
-2px
-rgba
-(
-0
-0
-0
-0
-.
-2
-)
-1px
-1px
-4px
 ;
 }
 .
@@ -803,18 +969,6 @@ rgba
 .
 phantom
 {
-border
-:
-1px
-solid
-rgba
-(
-190
-190
-190
-1
-)
-;
 }
 .
 overlay
