backing out bug 590742, bug 591147, bug 592586, a=dietrich
UltraBlame original commit: c3e21097bb7824784ef7b3bf55fe253e66d96711

--- a/browser/base/content/tabview/tabview.css
+++ b/browser/base/content/tabview/tabview.css
@@ -140,6 +140,16 @@ height
 ;
 }
 .
+thumb
+-
+shadow
+{
+position
+:
+absolute
+;
+}
+.
 favicon
 {
 position
@@ -183,6 +193,12 @@ stacked
 tab
 -
 title
+.
+stacked
+.
+thumb
+-
+shadow
 {
 display
 :
