--- a/browser/themes/gnomestripe/browser/tabview/tabview.css
+++ b/browser/themes/gnomestripe/browser/tabview/tabview.css
@@ -1,5 +1,11 @@
 body
 {
+background
+-
+color
+:
+transparent
+;
 font
 -
 family
@@ -66,12 +72,29 @@ padding
 6px
 4px
 ;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
 background
 -
 color
 :
-#
-D7D7D7
+rgba
+(
+245
+245
+245
+1
+)
 ;
 -
 moz
@@ -91,16 +114,7 @@ box
 -
 shadow
 :
-0
-1px
-0
-#
-FFFFFF
 inset
-0
--
-1px
-1px
 rgba
 (
 255
@@ -108,56 +122,16 @@ rgba
 255
 0
 .
-4
+6
 )
-inset
-1px
 0
-1px
-rgba
-(
-255
-255
-255
 0
-.
-4
-)
-inset
--
-1px
 0
-1px
-rgba
-(
-255
-255
-255
-0
-.
-4
-)
-inset
-0
-1px
 2px
-rgba
-(
-0
-0
-0
-0
-.
-4
-)
 ;
 cursor
 :
 pointer
-;
-margin
-:
-4px
 ;
 }
 .
@@ -185,17 +159,15 @@ rgba
 }
 .
 thumb
-{
--
-moz
--
-box
 -
 shadow
+{
+border
+-
+bottom
 :
-1px
-2px
-0
+5px
+solid
 rgba
 (
 0
@@ -203,8 +175,26 @@ rgba
 0
 0
 .
-2
+05
 )
+;
+margin
+-
+right
+:
+-
+12px
+;
+bottom
+:
+2px
+;
+width
+:
+94
+.
+5
+%
 ;
 }
 .
@@ -214,8 +204,13 @@ background
 -
 color
 :
-#
-D7D7D7
+rgba
+(
+245
+245
+245
+1
+)
 ;
 -
 moz
@@ -237,34 +232,34 @@ box
 -
 shadow
 :
-0
--
-1px
-0
+inset
 rgba
 (
-225
-225
-225
+255
+255
+255
 0
 .
-8
+6
 )
-inset
+0
 -
-1px
-0
-0
+2px
+0px
+inset
 rgba
 (
-225
-225
-225
+255
+255
+255
 0
 .
-8
+6
 )
-inset
+-
+2px
+0px
+0px
 ;
 padding
 :
@@ -294,7 +289,7 @@ rgba
 0
 0
 .
-3
+2
 )
 ;
 border
@@ -310,16 +305,16 @@ rgba
 0
 0
 .
-3
+2
 )
 ;
 height
 :
-16px
+17px
 ;
 width
 :
-16px
+17px
 ;
 }
 .
@@ -408,7 +403,7 @@ expander
 {
 bottom
 :
-8px
+6px
 ;
 right
 :
@@ -461,49 +456,6 @@ opacity
 1
 .
 0
-;
-}
-.
-close
-:
-hover
-.
-expander
-:
-hover
-{
--
-moz
--
-transition
--
-property
-:
-opacity
-;
--
-moz
--
-transition
--
-duration
-:
-0
-.
-5s
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-ease
--
-out
 ;
 }
 .
