--- a/browser/themes/pinstripe/browser/tabview/tabview.css
+++ b/browser/themes/pinstripe/browser/tabview/tabview.css
@@ -26,7 +26,7 @@ rgba
 0
 0
 .
-6
+4
 )
 ;
 font
@@ -72,12 +72,29 @@ padding
 6px
 4px
 ;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
 background
 -
 color
 :
-#
-D7D7D7
+rgba
+(
+245
+245
+245
+1
+)
 ;
 -
 moz
@@ -97,40 +114,24 @@ box
 -
 shadow
 :
+inset
+rgba
+(
+255
+255
+255
 0
-1px
+.
+6
+)
+0
+0
+0
 2px
-rgba
-(
-0
-0
-0
-0
-.
-4
-)
-;
-border
-:
-1px
-solid
-rgba
-(
-255
-255
-255
-0
-.
-5
-)
 ;
 cursor
 :
 pointer
-;
-margin
-:
-8px
 ;
 }
 .
@@ -152,23 +153,21 @@ rgba
 0
 0
 .
-3
+2
 )
 ;
 }
 .
 thumb
-{
--
-moz
--
-box
 -
 shadow
+{
+border
+-
+bottom
 :
-1px
-2px
-0
+5px
+solid
 rgba
 (
 0
@@ -176,8 +175,26 @@ rgba
 0
 0
 .
-2
+05
 )
+;
+margin
+-
+right
+:
+-
+12px
+;
+bottom
+:
+2px
+;
+width
+:
+94
+.
+5
+%
 ;
 }
 .
@@ -187,8 +204,13 @@ background
 -
 color
 :
-#
-D7D7D7
+rgba
+(
+245
+245
+245
+1
+)
 ;
 -
 moz
@@ -210,34 +232,34 @@ box
 -
 shadow
 :
-0
--
-1px
-0
+inset
 rgba
 (
-225
-225
-225
+255
+255
+255
 0
 .
-8
+6
 )
-inset
+0
 -
-1px
-0
-0
+2px
+0px
+inset
 rgba
 (
-225
-225
-225
+255
+255
+255
 0
 .
-8
+6
 )
-inset
+-
+2px
+0px
+0px
 ;
 padding
 :
@@ -267,7 +289,7 @@ rgba
 0
 0
 .
-3
+2
 )
 ;
 border
@@ -283,16 +305,16 @@ rgba
 0
 0
 .
-3
+2
 )
 ;
 height
 :
-16px
+17px
 ;
 width
 :
-16px
+17px
 ;
 }
 .
@@ -331,6 +353,12 @@ height
 :
 16px
 ;
+opacity
+:
+0
+.
+2
+;
 background
 :
 url
@@ -353,44 +381,17 @@ no
 -
 repeat
 ;
--
-moz
--
-transition
--
-property
-:
-opacity
-;
--
-moz
--
-transition
--
-duration
-:
-0
+}
 .
-5s
-;
--
-moz
--
-transition
--
-timing
--
-function
+close
 :
-ease
--
-out
-;
+hover
+{
 opacity
 :
-0
+1
 .
-2
+0
 ;
 }
 .
@@ -398,7 +399,7 @@ expander
 {
 bottom
 :
-8px
+6px
 ;
 right
 :
@@ -434,39 +435,6 @@ no
 -
 repeat
 ;
--
-moz
--
-transition
--
-property
-:
-opacity
-;
--
-moz
--
-transition
--
-duration
-:
-0
-.
-5s
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-ease
--
-out
-;
 opacity
 :
 0
@@ -475,47 +443,10 @@ opacity
 ;
 }
 .
-close
-:
-hover
-.
 expander
 :
 hover
 {
--
-moz
--
-transition
--
-property
-:
-opacity
-;
--
-moz
--
-transition
--
-duration
-:
-0
-.
-5s
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-ease
--
-out
-;
 opacity
 :
 1
@@ -553,10 +484,10 @@ tab
 -
 title
 {
-bottom
+top
 :
--
-20px
+100
+%
 ;
 text
 -
@@ -580,22 +511,6 @@ nowrap
 overflow
 :
 hidden
-;
-text
--
-shadow
-:
-0
-1px
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
 ;
 }
 .
@@ -687,8 +602,6 @@ important
 ;
 }
 .
-tab
-.
 focus
 {
 -
@@ -698,29 +611,20 @@ box
 -
 shadow
 :
-0
-0
-8px
--
-moz
--
-mac
--
-menuselect
-;
-border
-:
-1px
-solid
 rgba
 (
-255
-255
-255
-0
-.
-6
+54
+79
+225
+1
 )
+0px
+0px
+5px
+-
+1px
+!
+important
 ;
 }
 .
@@ -756,23 +660,6 @@ none
 .
 front
 .
-thumb
-{
--
-moz
--
-box
--
-shadow
-:
-none
-!
-important
-;
-}
-.
-front
-.
 focus
 {
 -
@@ -786,16 +673,14 @@ none
 !
 important
 ;
-border
-:
-none
-!
-important
-;
 }
 .
 tabInGroupItem
 {
+border
+:
+none
+;
 -
 moz
 -
@@ -804,31 +689,8 @@ box
 shadow
 :
 none
-;
-border
--
-color
-:
-transparent
-;
-background
--
-color
-:
-transparent
-;
-}
-.
-tabInGroupItem
-.
-favicon
-{
-background
--
-color
-:
-#
-EBEBEB
+!
+important
 ;
 }
 .
@@ -838,12 +700,29 @@ cursor
 :
 move
 ;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
 background
 -
 color
 :
-#
-EBEBEB
+rgba
+(
+248
+248
+248
+1
+)
 ;
 -
 moz
@@ -863,32 +742,32 @@ box
 -
 shadow
 :
-0
-1px
-4px
+inset
 rgba
 (
-0
-0
-0
+255
+255
+255
 0
 .
 6
 )
-;
-border
-:
-1px
-solid
+0
+0
+0
+2px
 rgba
 (
-255
-255
-255
+0
+0
+0
 0
 .
-5
+2
 )
+1px
+1px
+4px
 ;
 }
 .
@@ -926,12 +805,10 @@ border
 solid
 rgba
 (
-255
-255
-255
-0
-.
-5
+190
+190
+190
+1
 )
 ;
 }
