--- a/browser/themes/winstripe/browser/tabview/tabview.css
+++ b/browser/themes/winstripe/browser/tabview/tabview.css
@@ -1,5 +1,11 @@
 body
 {
+background
+-
+color
+:
+transparent
+;
 font
 -
 family
@@ -20,14 +26,14 @@ rgba
 0
 0
 .
-6
+4
 )
 ;
 font
 -
 size
 :
-13px
+12px
 ;
 line
 -
@@ -41,28 +47,6 @@ bg
 {
 background
 :
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabview
-/
-grain
-.
-png
-"
-)
-repeat
-scroll
-center
-top
 -
 moz
 -
@@ -70,18 +54,12 @@ linear
 -
 gradient
 (
-center
 top
 #
-CCD9EA
+F1F5FB
 #
-C7D5E7
+EDF4FB
 )
-repeat
-scroll
-0
-0
-transparent
 ;
 }
 .
@@ -94,12 +72,29 @@ padding
 6px
 4px
 ;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
 background
 -
 color
 :
-#
-E0EAF5
+rgba
+(
+245
+245
+245
+1
+)
 ;
 -
 moz
@@ -119,16 +114,7 @@ box
 -
 shadow
 :
-0
-1px
-0
-#
-FFFFFF
 inset
-0
--
-1px
-1px
 rgba
 (
 255
@@ -136,56 +122,16 @@ rgba
 255
 0
 .
-8
+6
 )
-inset
-1px
 0
-1px
-rgba
-(
-255
-255
-255
 0
-.
-8
-)
-inset
--
-1px
 0
-1px
-rgba
-(
-255
-255
-255
-0
-.
-8
-)
-inset
-0
-1px
 2px
-rgba
-(
-4
-38
-60
-0
-.
-4
-)
 ;
 cursor
 :
 pointer
-;
-margin
-:
-4px
 ;
 }
 .
@@ -202,28 +148,26 @@ border
 solid
 rgba
 (
-73
-99
-119
+0
+0
+0
 0
 .
-3
+2
 )
 ;
 }
 .
 thumb
-{
--
-moz
--
-box
 -
 shadow
+{
+border
+-
+bottom
 :
-1px
-2px
-0
+5px
+solid
 rgba
 (
 0
@@ -231,8 +175,26 @@ rgba
 0
 0
 .
-1
+05
 )
+;
+margin
+-
+right
+:
+-
+12px
+;
+bottom
+:
+2px
+;
+width
+:
+94
+.
+5
+%
 ;
 }
 .
@@ -242,8 +204,13 @@ background
 -
 color
 :
-#
-E0EAF5
+rgba
+(
+245
+245
+245
+1
+)
 ;
 -
 moz
@@ -257,6 +224,42 @@ bottomright
 0
 .
 4em
+;
+-
+moz
+-
+box
+-
+shadow
+:
+inset
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+0
+-
+2px
+0px
+inset
+rgba
+(
+255
+255
+255
+0
+.
+6
+)
+-
+2px
+0px
+0px
 ;
 padding
 :
@@ -281,12 +284,12 @@ right
 solid
 rgba
 (
-73
-99
-119
+0
+0
+0
 0
 .
-3
+2
 )
 ;
 border
@@ -297,12 +300,12 @@ bottom
 solid
 rgba
 (
-73
-99
-119
+0
+0
+0
 0
 .
-3
+2
 )
 ;
 height
@@ -350,6 +353,12 @@ height
 :
 16px
 ;
+opacity
+:
+0
+.
+2
+;
 background
 :
 url
@@ -372,44 +381,17 @@ no
 -
 repeat
 ;
--
-moz
--
-transition
--
-property
-:
-opacity
-;
--
-moz
--
-transition
--
-duration
-:
-0
+}
 .
-5s
-;
--
-moz
--
-transition
--
-timing
--
-function
+close
 :
-ease
--
-out
-;
+hover
+{
 opacity
 :
-0
+1
 .
-2
+0
 ;
 }
 .
@@ -453,39 +435,6 @@ no
 -
 repeat
 ;
--
-moz
--
-transition
--
-property
-:
-opacity
-;
--
-moz
--
-transition
--
-duration
-:
-0
-.
-5s
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-ease
--
-out
-;
 opacity
 :
 0
@@ -494,47 +443,10 @@ opacity
 ;
 }
 .
-close
-:
-hover
-.
 expander
 :
 hover
 {
--
-moz
--
-transition
--
-property
-:
-opacity
-;
--
-moz
--
-transition
--
-duration
-:
-0
-.
-5s
-;
--
-moz
--
-transition
--
-timing
--
-function
-:
-ease
--
-out
-;
 opacity
 :
 1
@@ -572,10 +484,10 @@ tab
 -
 title
 {
-bottom
+top
 :
--
-20px
+100
+%
 ;
 text
 -
@@ -599,22 +511,6 @@ nowrap
 overflow
 :
 hidden
-;
-text
--
-shadow
-:
-0
-1px
-rgba
-(
-255
-255
-255
-0
-.
-6
-)
 ;
 }
 .
@@ -706,8 +602,6 @@ important
 ;
 }
 .
-tab
-.
 focus
 {
 -
@@ -717,37 +611,20 @@ box
 -
 shadow
 :
-0
-1px
-0
-#
-FFFFFF
-inset
-0
+rgba
+(
+54
+79
+225
+1
+)
+0px
+0px
+5px
 -
 1px
-1px
-#
-FFFFFF
-inset
-1px
-0
-1px
-#
-FFFFFF
-inset
--
-1px
-0
-1px
-#
-FFFFFF
-inset
-0
-0
-8px
-#
-007ECE
+!
+important
 ;
 }
 .
@@ -783,23 +660,6 @@ none
 .
 front
 .
-thumb
-{
--
-moz
--
-box
--
-shadow
-:
-none
-!
-important
-;
-}
-.
-front
-.
 focus
 {
 -
@@ -817,6 +677,10 @@ important
 .
 tabInGroupItem
 {
+border
+:
+none
+;
 -
 moz
 -
@@ -825,26 +689,8 @@ box
 shadow
 :
 none
-;
-background
--
-color
-:
-#
-E0EAF5
-;
-}
-.
-tabInGroupItem
-.
-favicon
-{
-background
--
-color
-:
-#
-E0EAF5
+!
+important
 ;
 }
 .
@@ -854,12 +700,29 @@ cursor
 :
 move
 ;
+border
+:
+1px
+solid
+rgba
+(
+230
+230
+230
+1
+)
+;
 background
 -
 color
 :
-#
-E0EAF5
+rgba
+(
+248
+248
+248
+1
+)
 ;
 -
 moz
@@ -879,65 +742,32 @@ box
 -
 shadow
 :
-0
-1px
-0
-#
-FFFFFF
 inset
-0
--
-1px
-1px
 rgba
 (
 255
 255
 255
-0
-.
-8
-)
-inset
-1px
-0
-1px
-rgba
-(
-255
-255
-255
-0
-.
-8
-)
-inset
--
-1px
-0
-1px
-rgba
-(
-255
-255
-255
-0
-.
-8
-)
-inset
-0
-1px
-4px
-rgba
-(
-4
-38
-60
 0
 .
 6
 )
+0
+0
+0
+2px
+rgba
+(
+0
+0
+0
+0
+.
+2
+)
+1px
+1px
+4px
 ;
 }
 .
@@ -969,6 +799,18 @@ rgba
 .
 phantom
 {
+border
+:
+1px
+solid
+rgba
+(
+190
+190
+190
+1
+)
+;
 }
 .
 overlay
