--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -106,6 +106,387 @@ customToolbarColor
 )
 ;
 }
+#
+main
+-
+window
+[
+sizemode
+=
+"
+normal
+"
+]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
+>
+#
+appmenu
+-
+button
+-
+container
+{
+margin
+-
+top
+:
+1px
+;
+}
+#
+appmenu
+-
+button
+{
+border
+:
+2px
+solid
+;
+border
+-
+top
+:
+none
+;
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+5
+)
+rgba
+(
+83
+42
+6
+.
+9
+)
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+5
+)
+rgba
+(
+83
+42
+6
+.
+9
+)
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+5
+)
+rgba
+(
+83
+42
+6
+.
+9
+)
+;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+.
+25
+)
+inset
+0
+0
+2px
+1px
+rgba
+(
+255
+255
+255
+.
+25
+)
+inset
+;
+}
+#
+appmenu
+-
+button
+:
+-
+moz
+-
+window
+-
+inactive
+{
+-
+moz
+-
+border
+-
+left
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+4
+)
+rgba
+(
+0
+0
+0
+.
+5
+)
+;
+-
+moz
+-
+border
+-
+bottom
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+4
+)
+rgba
+(
+0
+0
+0
+.
+5
+)
+;
+-
+moz
+-
+border
+-
+right
+-
+colors
+:
+rgba
+(
+255
+255
+255
+.
+4
+)
+rgba
+(
+0
+0
+0
+.
+5
+)
+;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+0
+0
+1px
+rgba
+(
+255
+255
+255
+.
+25
+)
+inset
+;
+}
+#
+identity
+-
+popup
+#
+editBookmarkPanel
+#
+notification
+-
+popup
+{
+-
+moz
+-
+appearance
+:
+tooltip
+;
+color
+:
+InfoText
+;
+}
+#
+identity
+-
+popup
+-
+container
+{
+-
+moz
+-
+padding
+-
+start
+:
+6px
+;
+-
+moz
+-
+padding
+-
+end
+:
+6px
+;
+}
+#
+sidebar
+-
+splitter
+{
+border
+:
+0
+;
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+#
+A9B7C9
+;
+min
+-
+width
+:
+0
+;
+width
+:
+3px
+;
+background
+-
+color
+:
+transparent
+;
+-
+moz
+-
+margin
+-
+start
+:
+-
+3px
+;
+position
+:
+relative
+;
+z
+-
+index
+:
+10
+;
+}
 }
 media
 all
@@ -1026,128 +1407,6 @@ win
 browsertabbar
 -
 toolbox
-;
-}
-}
-media
-all
-and
-(
--
-moz
--
-windows
--
-default
--
-theme
-)
-{
-#
-identity
--
-popup
-#
-editBookmarkPanel
-#
-notification
--
-popup
-{
--
-moz
--
-appearance
-:
-tooltip
-;
-color
-:
-InfoText
-;
-}
-#
-identity
--
-popup
--
-container
-{
--
-moz
--
-padding
--
-start
-:
-6px
-;
--
-moz
--
-padding
--
-end
-:
-6px
-;
-}
-#
-sidebar
--
-splitter
-{
-border
-:
-0
-;
--
-moz
--
-border
--
-end
-:
-1px
-solid
-#
-A9B7C9
-;
-min
--
-width
-:
-0
-;
-width
-:
-3px
-;
-background
--
-color
-:
-transparent
-;
--
-moz
--
-margin
--
-start
-:
--
-3px
-;
-position
-:
-relative
-;
-z
--
-index
-:
-10
 ;
 }
 }
