--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -693,17 +693,6 @@ none
 ;
 background
 -
-color
-:
-rgb
-(
-228
-120
-14
-)
-;
-background
--
 image
 :
 -
@@ -713,32 +702,19 @@ linear
 -
 gradient
 (
-rgba
+rgb
 (
-255
-255
-255
-.
-7
+247
+182
+82
 )
-rgba
+rgb
 (
-255
-255
-255
-.
-4
-)
+215
+98
 10
-%
-rgba
-(
-255
-255
-255
-0
 )
-50
+95
 %
 )
 ;
@@ -750,48 +726,36 @@ padding
 -
 box
 ;
+-
+moz
+-
+border
+-
+radius
+:
+0
+0
+4px
+4px
+;
 border
 :
 1px
 solid
 rgba
 (
-0
-0
-0
+83
+42
+6
 .
-5
+9
 )
 ;
 border
 -
 top
--
-style
 :
 none
-;
--
-moz
--
-border
--
-radius
--
-bottomleft
-:
-4px
-;
--
-moz
--
-border
--
-radius
--
-bottomright
-:
-4px
 ;
 -
 moz
@@ -801,15 +765,28 @@ box
 shadow
 :
 0
+1px
 0
-5px
 rgba
 (
 255
 255
 255
 .
-5
+25
+)
+inset
+0
+0
+0
+1px
+rgba
+(
+255
+255
+255
+.
+25
 )
 inset
 ;
@@ -823,9 +800,26 @@ shadow
 :
 0
 0
+1px
+rgba
+(
+0
+0
+0
+.
+7
+)
+0
+1px
 2px
-#
-333
+rgba
+(
+0
+0
+0
+.
+5
+)
 ;
 font
 -
@@ -840,10 +834,42 @@ padding
 1
 .
 5em
+.
+15em
 ;
 margin
 :
 0
+;
+}
+#
+appmenu
+-
+button
+:
+-
+moz
+-
+window
+-
+inactive
+{
+background
+:
+transparent
+;
+border
+-
+color
+:
+rgba
+(
+0
+0
+0
+.
+4
+)
 ;
 }
 #
@@ -868,14 +894,147 @@ open
 {
 background
 -
-color
+image
 :
+-
+moz
+-
+radial
+-
+gradient
+(
+center
+bottom
+farthest
+-
+side
+rgba
+(
+252
+240
+89
+.
+5
+)
+10
+%
+rgba
+(
+252
+240
+89
+0
+)
+70
+%
+)
+-
+moz
+-
+radial
+-
+gradient
+(
+center
+bottom
+farthest
+-
+side
 rgb
 (
-248
-140
-34
+236
+133
+0
 )
+rgba
+(
+255
+229
+172
+0
+)
+)
+-
+moz
+-
+linear
+-
+gradient
+(
+rgb
+(
+246
+170
+69
+)
+rgb
+(
+209
+74
+0
+)
+95
+%
+)
+;
+border
+-
+color
+:
+rgba
+(
+83
+42
+6
+.
+9
+)
+;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+.
+1
+)
+inset
+0
+0
+2px
+1px
+rgba
+(
+250
+234
+169
+.
+7
+)
+inset
+0
+-
+1px
+0
+rgba
+(
+250
+234
+169
+.
+5
+)
+inset
 ;
 }
 #
@@ -905,28 +1064,30 @@ linear
 -
 gradient
 (
-rgba
+rgb
 (
-0
-0
-0
-.
-3
+246
+170
+69
 )
-rgba
+rgb
 (
+209
+74
 0
-0
-0
-.
-2
 )
-10
-%
-transparent
-60
+95
 %
 )
+;
+-
+moz
+-
+border
+-
+radius
+:
+0
 ;
 -
 moz
@@ -936,7 +1097,7 @@ box
 shadow
 :
 0
-0
+2px
 4px
 rgba
 (
@@ -944,7 +1105,19 @@ rgba
 0
 0
 .
-3
+4
+)
+inset
+0
+1px
+1px
+rgba
+(
+0
+0
+0
+.
+2
 )
 inset
 ;
@@ -1906,7 +2079,6 @@ right
 ;
 }
 media
-not
 all
 and
 (
@@ -1945,25 +2117,12 @@ button
 -
 container
 {
-%
-ifndef
-WINSTRIPE_AERO
 margin
 -
 top
 :
-1px
+4px
 ;
-%
-else
-margin
--
-top
-:
-2px
-;
-%
-endif
 }
 }
 #
