--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1093,6 +1093,96 @@ display
 none
 ;
 }
+.
+menuitem
+-
+tooltip
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+urlbarBindings
+.
+xml
+#
+menuitem
+-
+tooltip
+"
+)
+;
+}
+.
+menuitem
+-
+iconic
+-
+tooltip
+.
+menuitem
+-
+tooltip
+[
+type
+=
+"
+checkbox
+"
+]
+.
+menuitem
+-
+tooltip
+[
+type
+=
+"
+radio
+"
+]
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+urlbarBindings
+.
+xml
+#
+menuitem
+-
+iconic
+-
+tooltip
+"
+)
+;
+}
 #
 urlbar
 {
