--- a/browser/themes/pinstripe/browser/syncSetup.css
+++ b/browser/themes/pinstripe/browser/syncSetup.css
@@ -1,41 +1,98 @@
-.
 wizard
--
-header
--
-icon
 {
-list
 -
-style
+moz
 -
-image
+appearance
 :
-url
-(
-chrome
+none
+;
+width
 :
-/
-/
-browser
-/
-skin
-/
-sync
+55em
+;
+height
+:
+42em
+;
+padding
+:
+0
+;
+background
 -
-32
-.
-png
-)
+color
+:
+Window
 ;
 }
-wizard
 .
 wizard
 -
 page
 -
 box
+{
+-
+moz
+-
+appearance
+:
+none
+;
+padding
+-
+left
+:
+0
+;
+padding
+-
+right
+:
+0
+;
+margin
+:
+0
+;
+}
+wizardpage
+{
+-
+moz
+-
+box
+-
+pack
+:
+center
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+margin
+:
+0
+;
+padding
+:
+0
+8em
+;
+background
+-
+color
+:
+Window
+;
+}
 .
 wizard
 -
@@ -47,45 +104,124 @@ moz
 appearance
 :
 none
-!
-important
+;
+border
+:
+none
+;
+padding
+:
+2em
+0
+1em
+0
+;
+text
+-
+align
+:
+center
 ;
 }
+.
 wizard
+-
+header
+-
+label
 {
+font
+-
+size
+:
+24pt
+;
+font
+-
+weight
+:
+normal
+;
+}
+.
+wizard
+-
+buttons
+{
+border
+-
+top
+:
+2px
+solid
+#
+ccd9ea
+;
 background
 -
 color
 :
 #
-FFF
+f1f5fb
 ;
-background
+padding
 :
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-sync
--
-bg
+1em
+;
+}
 .
-png
-)
-#
-FFF
-repeat
+wizard
 -
-x
-center
+buttons
 -
-80px
+separator
+{
+visibility
+:
+collapse
+;
+}
+.
+wizard
+-
+header
+-
+icon
+{
+visibility
+:
+collapse
+;
+}
+.
+accountChoiceButton
+{
+font
+:
+menu
+;
+}
+.
+confirm
+{
+border
+:
+1px
+solid
+black
+;
+padding
+:
+1em
+;
+-
+moz
+-
+border
+-
+radius
+:
+5px
 ;
 }
 .
@@ -110,115 +246,6 @@ padding
 border
 :
 0px
-;
-}
-.
-accountChoiceButton
-{
--
-moz
--
-appearance
-:
-none
-;
-border
-:
-#
-999999
-1px
-solid
-!
-important
-;
-padding
-:
-2px
-3px
-;
--
-moz
--
-border
--
-radius
-:
-6px
-;
-background
--
-color
-:
-menu
-;
--
-moz
--
-box
--
-shadow
-:
-inset
-rgba
-(
-255
-255
-255
-0
-.
-5
-)
-0
-1px
-0px
-inset
-rgba
-(
-0
-0
-0
-0
-.
-1
-)
-0
--
-2px
-0px
-rgba
-(
-0
-0
-0
-0
-.
-1
-)
-0px
-1px
-0px
-;
-}
-.
-accountChoiceButton
-:
-hover
-{
-background
--
-color
-:
--
-moz
--
-MenuHover
-;
-color
-:
--
-moz
--
-MenuHoverText
 ;
 }
 .
@@ -322,78 +349,6 @@ size
 %
 ;
 }
-#
-newAccount
-#
-existingAccount
-{
-min
--
-height
-:
-5em
-;
-}
-#
-newAccount
-image
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-sync
--
-usedNever
-.
-png
-"
-)
-;
-}
-#
-existingAccount
-image
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-sync
--
-usedBefore
-.
-png
-"
-)
-;
-}
 .
 inputColumn
 {
@@ -405,14 +360,6 @@ margin
 end
 :
 2px
-}
-#
-tosDesc
-{
-width
-:
-16em
-;
 }
 #
 connect
@@ -452,12 +399,7 @@ png
 ;
 }
 #
-resetClient
-.
-mergeChoiceImage
-#
-chosenActionMerge
-image
+successPageIcon
 {
 list
 -
@@ -478,75 +420,7 @@ skin
 /
 sync
 -
-merge
-.
-png
-"
-)
-;
-}
-#
-wipeClient
-.
-mergeChoiceImage
-#
-chosenActionWipeClient
-image
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-sync
--
-wipeClient
-.
-png
-"
-)
-;
-}
-#
-wipeRemote
-.
-mergeChoiceImage
-#
-chosenActionWipeServer
-image
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-sync
--
-wipeServer
+32
 .
 png
 "
