Bug 587901 - Remove favicon from Location Bar and add indicator for sites without identity information. r+a=dolske
UltraBlame original commit: 1633907c75b711850807b8f7c41952381fbc0de1

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -7089,241 +7089,21 @@ ltr
 ;
 }
 #
-page
+identity
 -
-proxy
--
-favicon
-#
-urlbar
--
-throbber
+container
 {
-width
-:
-16px
-;
-height
-:
-16px
-;
-}
-#
-page
+min
 -
-proxy
--
-stack
-{
-width
-:
-24px
-;
 height
 :
 20px
 ;
-padding
-:
-2px
-4px
-;
-background
-:
-url
-(
-urlbar
--
-favicon
--
-glow
-.
-png
-)
-center
-center
-no
--
-repeat
-;
-}
-#
-page
--
-proxy
--
-favicon
-:
-not
-(
-[
-src
-]
-)
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-folder
--
-item
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-16px
-16px
-0px
-)
-;
-}
-#
-page
--
-proxy
--
-favicon
-[
-pageproxystate
-=
-"
-invalid
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-16px
-16px
-32px
-0px
-)
-;
-}
-#
-urlbar
--
-throbber
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-places
-/
-searching_16
-.
-png
-"
-)
-;
 }
 #
 identity
 -
-box
-{
-background
-:
--
-moz
--
-dialog
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-255
-255
-255
-.
-25
-)
-rgba
-(
-0
-0
-0
-.
-15
-)
-)
-;
-color
-:
--
-moz
--
-dialogtext
-;
--
-moz
--
-border
--
-end
-:
-1px
-solid
-ThreeDShadow
-;
-}
-#
-identity
--
-box
+container
 :
 -
 moz
@@ -7348,6 +7128,104 @@ ThreeDShadow
 ;
 }
 #
+notification
+-
+popup
+-
+box
+#
+identity
+-
+box
+{
+background
+-
+color
+:
+rgb
+(
+95
+%
+95
+%
+95
+%
+)
+;
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+rgba
+(
+170
+170
+170
+.
+25
+)
+rgba
+(
+0
+0
+0
+.
+3
+)
+)
+;
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+ThreeDShadow
+;
+color
+:
+#
+444
+;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+.
+25
+)
+;
+}
+#
+identity
+-
+box
+{
+padding
+:
+0
+1px
+;
+}
+#
 identity
 -
 box
@@ -7365,54 +7243,6 @@ dotted
 moz
 -
 DialogText
-;
-}
-#
-identity
--
-box
-:
-hover
-{
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-255
-255
-255
-.
-5
-)
-rgba
-(
-50
-%
-50
-%
-50
-%
-.
-2
-)
-rgba
-(
-0
-0
-0
-.
-15
-)
-)
 ;
 }
 #
@@ -7472,10 +7302,26 @@ icon
 -
 labels
 {
+-
+moz
+-
 padding
+-
+start
 :
+4px
+;
+-
+moz
+-
+transform
+:
+translate
+(
 0
-2px
+-
+1px
+)
 ;
 }
 #
@@ -7489,19 +7335,19 @@ background
 -
 color
 :
-rgba
+hsl
 (
-30
+219
+75
+%
 80
-170
-0
-.
-7
+%
 )
 ;
 color
 :
-white
+#
+333
 ;
 }
 #
@@ -7515,19 +7361,63 @@ background
 -
 color
 :
-rgba
+hsl
 (
-50
-150
-50
-0
-.
-8
+92
+75
+%
+72
+%
 )
 ;
-color
+}
+#
+identity
+-
+dropmarker
+{
+-
+moz
+-
+appearance
 :
-white
+toolbarbutton
+-
+dropdown
+;
+width
+:
+12px
+;
+height
+:
+12px
+;
+}
+#
+urlbar
+[
+pageproxystate
+=
+"
+invalid
+"
+]
+>
+#
+identity
+-
+container
+>
+#
+identity
+-
+box
+{
+opacity
+:
+.
+5
 ;
 }
 #
@@ -8163,7 +8053,7 @@ popup
 -
 box
 {
-margin
+padding
 :
 0
 3px
