--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -7268,64 +7268,16 @@ background
 -
 color
 :
--
-moz
--
-dialog
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
+rgb
 (
-rgba
-(
-255
-255
-255
-.
-25
-)
-rgba
-(
-0
-0
-0
-.
-15
-)
+95
+%
+95
+%
+95
+%
 )
 ;
-color
-:
--
-moz
--
-dialogText
-;
--
-moz
--
-border
--
-radius
-:
-2px
-;
-}
-#
-identity
--
-box
-:
-hover
-{
 background
 -
 image
@@ -7347,15 +7299,37 @@ rgba
 )
 rgba
 (
-50
+70
 %
-50
+70
 %
-50
+70
 %
 .
-2
+1
 )
+rgba
+(
+0
+0
+0
+.
+1
+)
+)
+;
+background
+-
+origin
+:
+border
+-
+box
+;
+border
+:
+1px
+solid
 rgba
 (
 0
@@ -7364,6 +7338,83 @@ rgba
 .
 15
 )
+;
+-
+moz
+-
+border
+-
+radius
+:
+2px
+;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+0
+0
+0
+.
+1
+)
+0
+0
+1px
+rgba
+(
+255
+255
+255
+.
+4
+)
+inset
+;
+min
+-
+height
+:
+16px
+;
+padding
+:
+0
+2px
+;
+font
+-
+weight
+:
+bold
+;
+color
+:
+#
+666
+;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+.
+25
 )
 ;
 }
@@ -7432,44 +7483,21 @@ verifiedIdentity
 {
 color
 :
-white
+#
+444
 ;
-text
+border
 -
-shadow
+color
 :
-0
-1px
-0
 rgba
 (
 0
 0
 0
 .
-25
+3
 )
-;
--
-moz
--
-box
--
-shadow
-:
-0
-0
-0
-1px
-rgba
-(
-0
-0
-0
-.
-2
-)
-inset
 ;
 }
 #
@@ -7486,9 +7514,9 @@ color
 hsl
 (
 219
-45
+75
 %
-60
+80
 %
 )
 ;
@@ -7507,9 +7535,9 @@ color
 hsl
 (
 92
-45
+75
 %
-52
+72
 %
 )
 ;
@@ -7528,10 +7556,8 @@ outline
 :
 1px
 dotted
--
-moz
--
-DialogText
+#
+444
 ;
 outline
 -
@@ -7539,36 +7565,6 @@ offset
 :
 -
 3px
-;
-}
-#
-identity
--
-box
-.
-verifiedDomain
-:
--
-moz
--
-focusring
-#
-identity
--
-box
-.
-verifiedIdentity
-:
--
-moz
--
-focusring
-{
-outline
--
-color
-:
-white
 ;
 }
 #
@@ -7585,15 +7581,6 @@ margin
 -
 start
 :
-1px
-;
--
-moz
--
-margin
--
-end
-:
 3px
 ;
 -
@@ -7607,6 +7594,82 @@ translate
 -
 1px
 )
+;
+}
+#
+identity
+-
+dropmarker
+{
+list
+-
+style
+-
+image
+:
+url
+(
+identity
+-
+button
+-
+dropdown
+.
+png
+)
+;
+margin
+-
+bottom
+:
+1px
+;
+}
+#
+identity
+-
+box
+:
+not
+(
+.
+verifiedDomain
+)
+:
+not
+(
+.
+verifiedIdentity
+)
+>
+#
+identity
+-
+dropmarker
+#
+urlbar
+[
+pageproxystate
+=
+"
+invalid
+"
+]
+>
+#
+identity
+-
+container
+>
+#
+identity
+-
+box
+{
+opacity
+:
+.
+5
 ;
 }
 #
@@ -7752,182 +7815,6 @@ rect
 26px
 11px
 13px
-)
-;
-}
-#
-page
--
-proxy
--
-favicon
-#
-urlbar
--
-throbber
-{
-width
-:
-16px
-;
-height
-:
-16px
-;
-}
-#
-page
--
-proxy
--
-stack
-{
-width
-:
-24px
-;
-height
-:
-18px
-;
-padding
-:
-1px
-4px
-;
-background
-:
-url
-(
-urlbar
--
-favicon
--
-glow
-.
-png
-)
-center
-center
-no
--
-repeat
-;
-}
-#
-page
--
-proxy
--
-favicon
-:
-not
-(
-[
-src
-]
-)
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-folder
--
-item
-.
-png
-"
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-16px
-16px
-0px
-)
-}
-#
-page
--
-proxy
--
-favicon
-[
-pageproxystate
-=
-"
-invalid
-"
-]
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-32px
-16px
-48px
-0px
-)
-;
-}
-#
-urlbar
--
-throbber
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-places
-/
-searching_16
-.
-png
-"
 )
 ;
 }
@@ -13725,7 +13612,7 @@ popup
 -
 box
 {
-margin
+padding
 :
 0
 3px
