--- a/browser/themes/gnomestripe/browser/searchbar.css
+++ b/browser/themes/gnomestripe/browser/searchbar.css
@@ -201,10 +201,15 @@ center
 ;
 background
 :
--
-moz
--
-dialog
+rgb
+(
+95
+%
+95
+%
+95
+%
+)
 -
 moz
 -
@@ -214,9 +219,9 @@ gradient
 (
 rgba
 (
-255
-255
-255
+170
+170
+170
 .
 25
 )
@@ -226,7 +231,7 @@ rgba
 0
 0
 .
-15
+3
 )
 )
 ;
@@ -278,56 +283,6 @@ end
 border
 :
 0
-;
-}
-.
-searchbar
--
-engine
--
-button
-:
-hover
-{
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-255
-255
-255
-.
-5
-)
-rgba
-(
-50
-%
-50
-%
-50
-%
-.
-2
-)
-rgba
-(
-0
-0
-0
-.
-15
-)
-)
 ;
 }
 .
