Backed out changeset 1633907c75b7
UltraBlame original commit: 225690b9d9f699c7465de1df88a4ab56a8cda462

--- a/browser/themes/gnomestripe/browser/searchbar.css
+++ b/browser/themes/gnomestripe/browser/searchbar.css
@@ -201,15 +201,10 @@ center
 ;
 background
 :
-rgb
-(
-95
-%
-95
-%
-95
-%
-)
+-
+moz
+-
+dialog
 -
 moz
 -
@@ -219,9 +214,9 @@ gradient
 (
 rgba
 (
-170
-170
-170
+255
+255
+255
 .
 25
 )
@@ -231,7 +226,7 @@ rgba
 0
 0
 .
-3
+15
 )
 )
 ;
@@ -283,6 +278,56 @@ end
 border
 :
 0
+;
+}
+.
+searchbar
+-
+engine
+-
+button
+:
+hover
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+rgba
+(
+255
+255
+255
+.
+5
+)
+rgba
+(
+50
+%
+50
+%
+50
+%
+.
+2
+)
+rgba
+(
+0
+0
+0
+.
+15
+)
+)
 ;
 }
 .
