--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -5455,15 +5455,6 @@ margin
 -
 moz
 -
-margin
--
-end
-:
-3px
-;
--
-moz
--
 border
 -
 radius
@@ -5512,29 +5503,6 @@ rgba
 2
 )
 ;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-eee
-#
-ccc
-)
-;
-min
--
-height
-:
-18px
-;
 }
 #
 identity
@@ -5574,6 +5542,65 @@ moz
 mac
 -
 focusring
+;
+}
+#
+identity
+-
+box
+{
+color
+:
+white
+;
+text
+-
+shadow
+:
+0
+1px
+1px
+rgba
+(
+0
+0
+0
+0
+.
+7
+)
+;
+-
+moz
+-
+margin
+-
+end
+:
+3px
+;
+}
+#
+identity
+-
+box
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+#
+FFF
+#
+DDD
+)
 ;
 }
 #
@@ -5638,41 +5665,6 @@ identity
 box
 .
 verifiedDomain
-#
-identity
--
-box
-.
-verifiedIdentity
-{
-color
-:
-white
-;
-text
--
-shadow
-:
-0
-1px
-1px
-rgba
-(
-0
-0
-0
-0
-.
-7
-)
-;
-}
-#
-identity
--
-box
-.
-verifiedDomain
 {
 background
 -
@@ -5724,72 +5716,11 @@ icon
 -
 labels
 {
--
-moz
--
-margin
--
-start
-:
-3px
-;
-margin
--
-bottom
-:
-1px
-;
-}
-#
-identity
--
-dropmarker
-{
-list
--
-style
--
-image
-:
-url
-(
-toolbarbutton
--
-dropmarker
-.
-png
-)
-;
 margin
 :
 0
-3px
-;
-}
-#
-urlbar
-[
-pageproxystate
-=
-"
-invalid
-"
-]
->
-#
-identity
--
-container
->
-#
-identity
--
-box
-{
-opacity
-:
-.
-5
+4px
+1px
 ;
 }
 #
@@ -5876,6 +5807,238 @@ relative
 height
 :
 22px
+;
+}
+#
+page
+-
+proxy
+-
+favicon
+#
+urlbar
+-
+throbber
+{
+width
+:
+16px
+;
+height
+:
+16px
+;
+margin
+:
+0px
+;
+padding
+:
+0px
+;
+}
+#
+page
+-
+proxy
+-
+stack
+{
+width
+:
+18px
+;
+height
+:
+16px
+;
+padding
+:
+0
+1px
+;
+}
+#
+identity
+-
+box
+.
+verifiedIdentity
+>
+hbox
+>
+#
+page
+-
+proxy
+-
+stack
+#
+identity
+-
+box
+.
+verifiedDomain
+>
+hbox
+>
+#
+page
+-
+proxy
+-
+stack
+{
+width
+:
+24px
+;
+padding
+:
+0
+4px
+;
+}
+#
+identity
+-
+box
+.
+verifiedIdentity
+>
+hbox
+>
+#
+page
+-
+proxy
+-
+stack
+#
+identity
+-
+box
+.
+verifiedDomain
+>
+hbox
+>
+#
+page
+-
+proxy
+-
+stack
+{
+background
+:
+url
+(
+urlbar
+-
+favicon
+-
+glow
+.
+png
+)
+center
+center
+no
+-
+repeat
+;
+}
+#
+page
+-
+proxy
+-
+favicon
+:
+not
+(
+[
+src
+]
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+places
+/
+defaultFavicon
+.
+png
+"
+)
+;
+}
+#
+page
+-
+proxy
+-
+favicon
+[
+pageproxystate
+=
+"
+invalid
+"
+]
+{
+opacity
+:
+0
+.
+5
+;
+}
+#
+urlbar
+-
+throbber
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+searching_16
+.
+png
+"
+)
 ;
 }
 #
@@ -14732,7 +14895,7 @@ popup
 -
 box
 {
-padding
+margin
 :
 0
 3px
