--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1409,6 +1409,45 @@ popup
 ;
 }
 #
+urlbar
+-
+throbber
+:
+not
+(
+[
+busy
+=
+"
+true
+"
+]
+)
+#
+urlbar
+-
+throbber
+[
+busy
+=
+"
+true
+"
+]
++
+#
+page
+-
+proxy
+-
+favicon
+{
+display
+:
+none
+;
+}
+#
 feed
 -
 button
@@ -1641,6 +1680,13 @@ identity
 box
 .
 verifiedIdentity
+>
+#
+identity
+-
+box
+-
+inner
 >
 #
 identity
