--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -7089,21 +7089,241 @@ ltr
 ;
 }
 #
-identity
+page
 -
-container
+proxy
+-
+favicon
+#
+urlbar
+-
+throbber
 {
-min
+width
+:
+16px
+;
+height
+:
+16px
+;
+}
+#
+page
 -
+proxy
+-
+stack
+{
+width
+:
+24px
+;
 height
 :
 20px
+;
+padding
+:
+2px
+4px
+;
+background
+:
+url
+(
+urlbar
+-
+favicon
+-
+glow
+.
+png
+)
+center
+center
+no
+-
+repeat
+;
+}
+#
+page
+-
+proxy
+-
+favicon
+:
+not
+(
+[
+src
+]
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+folder
+-
+item
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+;
+}
+#
+page
+-
+proxy
+-
+favicon
+[
+pageproxystate
+=
+"
+invalid
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+16px
+16px
+32px
+0px
+)
+;
+}
+#
+urlbar
+-
+throbber
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+searching_16
+.
+png
+"
+)
 ;
 }
 #
 identity
 -
-container
+box
+{
+background
+:
+-
+moz
+-
+dialog
+-
+moz
+-
+linear
+-
+gradient
+(
+rgba
+(
+255
+255
+255
+.
+25
+)
+rgba
+(
+0
+0
+0
+.
+15
+)
+)
+;
+color
+:
+-
+moz
+-
+dialogtext
+;
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+ThreeDShadow
+;
+}
+#
+identity
+-
+box
 :
 -
 moz
@@ -7128,104 +7348,6 @@ ThreeDShadow
 ;
 }
 #
-notification
--
-popup
--
-box
-#
-identity
--
-box
-{
-background
--
-color
-:
-rgb
-(
-95
-%
-95
-%
-95
-%
-)
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-170
-170
-170
-.
-25
-)
-rgba
-(
-0
-0
-0
-.
-3
-)
-)
-;
--
-moz
--
-border
--
-end
-:
-1px
-solid
-ThreeDShadow
-;
-color
-:
-#
-444
-;
-text
--
-shadow
-:
-0
-1px
-0
-rgba
-(
-255
-255
-255
-.
-25
-)
-;
-}
-#
-identity
--
-box
-{
-padding
-:
-0
-1px
-;
-}
-#
 identity
 -
 box
@@ -7243,6 +7365,54 @@ dotted
 moz
 -
 DialogText
+;
+}
+#
+identity
+-
+box
+:
+hover
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+rgba
+(
+255
+255
+255
+.
+5
+)
+rgba
+(
+50
+%
+50
+%
+50
+%
+.
+2
+)
+rgba
+(
+0
+0
+0
+.
+15
+)
+)
 ;
 }
 #
@@ -7302,26 +7472,10 @@ icon
 -
 labels
 {
--
-moz
--
 padding
--
-start
 :
-4px
-;
--
-moz
--
-transform
-:
-translate
-(
 0
--
-1px
-)
+2px
 ;
 }
 #
@@ -7335,19 +7489,19 @@ background
 -
 color
 :
-hsl
+rgba
 (
-219
-75
-%
+30
 80
-%
+170
+0
+.
+7
 )
 ;
 color
 :
-#
-333
+white
 ;
 }
 #
@@ -7361,63 +7515,19 @@ background
 -
 color
 :
-hsl
+rgba
 (
-92
-75
-%
-72
-%
+50
+150
+50
+0
+.
+8
 )
 ;
-}
-#
-identity
--
-dropmarker
-{
--
-moz
--
-appearance
+color
 :
-toolbarbutton
--
-dropdown
-;
-width
-:
-12px
-;
-height
-:
-12px
-;
-}
-#
-urlbar
-[
-pageproxystate
-=
-"
-invalid
-"
-]
->
-#
-identity
--
-container
->
-#
-identity
--
-box
-{
-opacity
-:
-.
-5
+white
 ;
 }
 #
@@ -8053,7 +8163,7 @@ popup
 -
 box
 {
-padding
+margin
 :
 0
 3px
