--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -7268,16 +7268,64 @@ background
 -
 color
 :
-rgb
+-
+moz
+-
+dialog
+;
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
 (
-95
-%
-95
-%
-95
-%
+rgba
+(
+255
+255
+255
+.
+25
+)
+rgba
+(
+0
+0
+0
+.
+15
+)
 )
 ;
+color
+:
+-
+moz
+-
+dialogText
+;
+-
+moz
+-
+border
+-
+radius
+:
+2px
+;
+}
+#
+identity
+-
+box
+:
+hover
+{
 background
 -
 image
@@ -7299,37 +7347,15 @@ rgba
 )
 rgba
 (
-70
+50
 %
-70
+50
 %
-70
+50
 %
 .
-1
+2
 )
-rgba
-(
-0
-0
-0
-.
-1
-)
-)
-;
-background
--
-origin
-:
-border
--
-box
-;
-border
-:
-1px
-solid
 rgba
 (
 0
@@ -7338,83 +7364,6 @@ rgba
 .
 15
 )
-;
--
-moz
--
-border
--
-radius
-:
-2px
-;
--
-moz
--
-box
--
-shadow
-:
-0
-1px
-0
-rgba
-(
-0
-0
-0
-.
-1
-)
-0
-0
-1px
-rgba
-(
-255
-255
-255
-.
-4
-)
-inset
-;
-min
--
-height
-:
-16px
-;
-padding
-:
-0
-2px
-;
-font
--
-weight
-:
-bold
-;
-color
-:
-#
-666
-;
-text
--
-shadow
-:
-0
-1px
-0
-rgba
-(
-255
-255
-255
-.
-25
 )
 ;
 }
@@ -7483,21 +7432,44 @@ verifiedIdentity
 {
 color
 :
-#
-444
+white
 ;
-border
+text
 -
-color
+shadow
 :
+0
+1px
+0
 rgba
 (
 0
 0
 0
 .
-3
+25
 )
+;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+0
+0
+1px
+rgba
+(
+0
+0
+0
+.
+2
+)
+inset
 ;
 }
 #
@@ -7514,9 +7486,9 @@ color
 hsl
 (
 219
-75
+45
 %
-80
+60
 %
 )
 ;
@@ -7535,9 +7507,9 @@ color
 hsl
 (
 92
-75
+45
 %
-72
+52
 %
 )
 ;
@@ -7556,8 +7528,10 @@ outline
 :
 1px
 dotted
-#
-444
+-
+moz
+-
+DialogText
 ;
 outline
 -
@@ -7565,6 +7539,36 @@ offset
 :
 -
 3px
+;
+}
+#
+identity
+-
+box
+.
+verifiedDomain
+:
+-
+moz
+-
+focusring
+#
+identity
+-
+box
+.
+verifiedIdentity
+:
+-
+moz
+-
+focusring
+{
+outline
+-
+color
+:
+white
 ;
 }
 #
@@ -7581,6 +7585,15 @@ margin
 -
 start
 :
+1px
+;
+-
+moz
+-
+margin
+-
+end
+:
 3px
 ;
 -
@@ -7594,82 +7607,6 @@ translate
 -
 1px
 )
-;
-}
-#
-identity
--
-dropmarker
-{
-list
--
-style
--
-image
-:
-url
-(
-identity
--
-button
--
-dropdown
-.
-png
-)
-;
-margin
--
-bottom
-:
-1px
-;
-}
-#
-identity
--
-box
-:
-not
-(
-.
-verifiedDomain
-)
-:
-not
-(
-.
-verifiedIdentity
-)
->
-#
-identity
--
-dropmarker
-#
-urlbar
-[
-pageproxystate
-=
-"
-invalid
-"
-]
->
-#
-identity
--
-container
->
-#
-identity
--
-box
-{
-opacity
-:
-.
-5
 ;
 }
 #
@@ -7815,6 +7752,182 @@ rect
 26px
 11px
 13px
+)
+;
+}
+#
+page
+-
+proxy
+-
+favicon
+#
+urlbar
+-
+throbber
+{
+width
+:
+16px
+;
+height
+:
+16px
+;
+}
+#
+page
+-
+proxy
+-
+stack
+{
+width
+:
+24px
+;
+height
+:
+18px
+;
+padding
+:
+1px
+4px
+;
+background
+:
+url
+(
+urlbar
+-
+favicon
+-
+glow
+.
+png
+)
+center
+center
+no
+-
+repeat
+;
+}
+#
+page
+-
+proxy
+-
+favicon
+:
+not
+(
+[
+src
+]
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+folder
+-
+item
+.
+png
+"
+)
+;
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+0px
+16px
+16px
+0px
+)
+}
+#
+page
+-
+proxy
+-
+favicon
+[
+pageproxystate
+=
+"
+invalid
+"
+]
+{
+-
+moz
+-
+image
+-
+region
+:
+rect
+(
+32px
+16px
+48px
+0px
+)
+;
+}
+#
+urlbar
+-
+throbber
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+places
+/
+searching_16
+.
+png
+"
 )
 ;
 }
@@ -13612,7 +13725,7 @@ popup
 -
 box
 {
-padding
+margin
 :
 0
 3px
