--- a/browser/base/content/aboutHome.css
+++ b/browser/base/content/aboutHome.css
@@ -152,8 +152,29 @@ white
 ;
 }
 #
-brandLogo
+brandStart
+:
+before
 {
+content
+:
+url
+(
+"
+chrome
+:
+/
+/
+branding
+/
+content
+/
+icon128
+.
+png
+"
+)
+;
 position
 :
 absolute
@@ -172,7 +193,9 @@ ltr
 "
 ]
 #
-brandLogo
+brandStart
+:
+before
 {
 right
 :
@@ -188,7 +211,9 @@ rtl
 "
 ]
 #
-brandLogo
+brandStart
+:
+before
 {
 left
 :
