Bug 556487 - reftests, test_flush_on_paint.html fix. r=roc a=blocking2.0
UltraBlame original commit: e28be11c3dc846789886d437da699ad3f20bf5ea

--- a/layout/base/tests/test_flush_on_paint.html
+++ b/layout/base/tests/test_flush_on_paint.html
@@ -287,11 +287,9 @@ doIteration
 {
 lastPaintCount
 =
-plugin
+window
 .
-getPaintCount
-(
-)
+mozPaintCount
 ;
 ok
 (
@@ -356,20 +354,16 @@ done
 :
 "
 +
-plugin
+window
 .
-getPaintCount
-(
-)
+mozPaintCount
 )
 ;
 if
 (
-plugin
+window
 .
-getPaintCount
-(
-)
+mozPaintCount
 =
 =
 lastPaintCount
