Bug 577508 - Make the HTML5 parser hide the old page from view when the page being loaded shows a dialog. r=bzbarsky, a=blocking2.0-final.
UltraBlame original commit: 353a0ee16d787f376af26e6b0c98fd2941bcb5b1

--- a/layout/base/tests/test_bug469170.html
+++ b/layout/base/tests/test_bug469170.html
@@ -104,6 +104,14 @@ head
 >
 <
 body
+onload
+=
+"
+runTest
+(
+)
+;
+"
 >
 <
 p
@@ -239,6 +247,17 @@ Bug
 *
 *
 /
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+function
+runTest
+(
+)
+{
 netscape
 .
 security
@@ -446,6 +465,13 @@ pixels
 fully
 transparent
 "
+)
+;
+}
+SimpleTest
+.
+finish
+(
 )
 ;
 }
