Bug 594163 - don't reset #appmenu-button's background-clip when the window is inactive. r=gavin
UltraBlame original commit: 7e74414a4378fed275199ac31b501cc5c1a42b73

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -692,8 +692,6 @@ appearance
 none
 ;
 background
--
-image
 :
 -
 moz
@@ -855,8 +853,10 @@ window
 inactive
 {
 background
+-
+image
 :
-transparent
+none
 ;
 border
 -
