Bug 587901 - tweak identity box styling. r=dolske
UltraBlame original commit: 23e49f8ab15bf3fcbbe8157d064a310913b37c5b

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -7268,10 +7268,15 @@ background
 -
 color
 :
--
-moz
--
-dialog
+rgb
+(
+95
+%
+95
+%
+95
+%
+)
 ;
 background
 -
@@ -7290,8 +7295,41 @@ rgba
 255
 255
 .
-25
+5
 )
+rgba
+(
+70
+%
+70
+%
+70
+%
+.
+1
+)
+rgba
+(
+0
+0
+0
+.
+1
+)
+)
+;
+background
+-
+origin
+:
+border
+-
+box
+;
+border
+:
+1px
+solid
 rgba
 (
 0
@@ -7300,14 +7338,6 @@ rgba
 .
 15
 )
-)
-;
-color
-:
--
-moz
--
-dialogText
 ;
 -
 moz
@@ -7317,6 +7347,70 @@ border
 radius
 :
 2px
+;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+0
+0
+0
+.
+1
+)
+0
+0
+1px
+rgba
+(
+255
+255
+255
+.
+4
+)
+inset
+;
+min
+-
+height
+:
+16px
+;
+font
+-
+weight
+:
+bold
+;
+color
+:
+#
+666
+;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+255
+255
+255
+.
+25
+)
 ;
 }
 #
@@ -7432,44 +7526,21 @@ verifiedIdentity
 {
 color
 :
-white
+#
+444
 ;
-text
+border
 -
-shadow
+color
 :
-0
-1px
-0
 rgba
 (
 0
 0
 0
 .
-25
+3
 )
-;
--
-moz
--
-box
--
-shadow
-:
-0
-0
-0
-1px
-rgba
-(
-0
-0
-0
-.
-2
-)
-inset
 ;
 }
 #
@@ -7486,9 +7557,9 @@ color
 hsl
 (
 219
-45
+75
 %
-60
+80
 %
 )
 ;
@@ -7507,9 +7578,9 @@ color
 hsl
 (
 92
-45
+55
 %
-52
+72
 %
 )
 ;
@@ -7528,10 +7599,8 @@ outline
 :
 1px
 dotted
--
-moz
--
-DialogText
+#
+444
 ;
 outline
 -
@@ -7539,36 +7608,6 @@ offset
 :
 -
 3px
-;
-}
-#
-identity
--
-box
-.
-verifiedDomain
-:
--
-moz
--
-focusring
-#
-identity
--
-box
-.
-verifiedIdentity
-:
--
-moz
--
-focusring
-{
-outline
--
-color
-:
-white
 ;
 }
 #
@@ -7607,6 +7646,20 @@ translate
 -
 1px
 )
+;
+margin
+-
+top
+:
+-
+1px
+;
+margin
+-
+bottom
+:
+-
+1px
 ;
 }
 #
