--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -7271,11 +7271,23 @@ identity
 box
 {
 background
+-
+color
 :
+rgb
+(
+95
+%
+95
+%
+95
+%
+)
+;
+background
 -
-moz
--
-dialog
+image
+:
 -
 moz
 -
@@ -7285,9 +7297,9 @@ gradient
 (
 rgba
 (
-255
-255
-255
+170
+170
+170
 .
 25
 )
@@ -7297,16 +7309,14 @@ rgba
 0
 0
 .
-15
+3
 )
 )
 ;
 color
 :
--
-moz
--
-dialogtext
+#
+444
 ;
 -
 moz
@@ -7373,54 +7383,6 @@ identity
 box
 :
 hover
-{
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-rgba
-(
-255
-255
-255
-.
-5
-)
-rgba
-(
-50
-%
-50
-%
-50
-%
-.
-2
-)
-rgba
-(
-0
-0
-0
-.
-15
-)
-)
-;
-}
-#
-identity
--
-box
-:
-hover
 :
 active
 #
@@ -7472,10 +7434,23 @@ icon
 -
 labels
 {
+-
+moz
+-
 padding
+-
+start
 :
-0
 2px
+;
+-
+moz
+-
+padding
+-
+end
+:
+3px
 ;
 }
 #
@@ -7503,6 +7478,22 @@ color
 :
 white
 ;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+0
+0
+0
+.
+25
+)
+;
 }
 #
 identity
@@ -7528,6 +7519,22 @@ rgba
 color
 :
 white
+;
+text
+-
+shadow
+:
+0
+1px
+0
+rgba
+(
+0
+0
+0
+.
+25
+)
 ;
 }
 #
