Backed out bug 587901's winstripe changes. a=backout
UltraBlame original commit: 94a0c347256d04d1bbba72afc85e8424318f13a3

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -7268,16 +7268,64 @@ background
 -
 color
 :
-rgb
+-
+moz
+-
+dialog
+;
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
 (
-95
-%
-95
-%
-95
-%
+rgba
+(
+255
+255
+255
+.
+25
+)
+rgba
+(
+0
+0
+0
+.
+15
+)
 )
 ;
+color
+:
+-
+moz
+-
+dialogText
+;
+-
+moz
+-
+border
+-
+radius
+:
+2px
+;
+}
+#
+identity
+-
+box
+:
+hover
+{
 background
 -
 image
@@ -7299,37 +7347,15 @@ rgba
 )
 rgba
 (
-70
+50
 %
-70
+50
 %
-70
+50
 %
 .
-1
+2
 )
-rgba
-(
-0
-0
-0
-.
-1
-)
-)
-;
-background
--
-origin
-:
-border
--
-box
-;
-border
-:
-1px
-solid
 rgba
 (
 0
@@ -7338,78 +7364,6 @@ rgba
 .
 15
 )
-;
--
-moz
--
-border
--
-radius
-:
-2px
-;
--
-moz
--
-box
--
-shadow
-:
-0
-1px
-0
-rgba
-(
-0
-0
-0
-.
-1
-)
-0
-0
-1px
-rgba
-(
-255
-255
-255
-.
-4
-)
-inset
-;
-min
--
-height
-:
-16px
-;
-font
--
-weight
-:
-bold
-;
-color
-:
-#
-666
-;
-text
--
-shadow
-:
-0
-1px
-0
-rgba
-(
-255
-255
-255
-.
-25
 )
 ;
 }
@@ -7478,21 +7432,44 @@ verifiedIdentity
 {
 color
 :
-#
-444
+white
 ;
-border
+text
 -
-color
+shadow
 :
+0
+1px
+0
 rgba
 (
 0
 0
 0
 .
-3
+25
 )
+;
+-
+moz
+-
+box
+-
+shadow
+:
+0
+0
+0
+1px
+rgba
+(
+0
+0
+0
+.
+2
+)
+inset
 ;
 }
 #
@@ -7509,9 +7486,9 @@ color
 hsl
 (
 219
-75
+45
 %
-80
+60
 %
 )
 ;
@@ -7530,9 +7507,9 @@ color
 hsl
 (
 92
-55
+45
 %
-72
+52
 %
 )
 ;
@@ -7551,8 +7528,10 @@ outline
 :
 1px
 dotted
-#
-444
+-
+moz
+-
+DialogText
 ;
 outline
 -
@@ -7560,6 +7539,36 @@ offset
 :
 -
 3px
+;
+}
+#
+identity
+-
+box
+.
+verifiedDomain
+:
+-
+moz
+-
+focusring
+#
+identity
+-
+box
+.
+verifiedIdentity
+:
+-
+moz
+-
+focusring
+{
+outline
+-
+color
+:
+white
 ;
 }
 #
@@ -7598,20 +7607,6 @@ translate
 -
 1px
 )
-;
-margin
--
-top
-:
--
-1px
-;
-margin
--
-bottom
-:
--
-1px
 ;
 }
 #
