Fix missing frame in style system mochitests.  (Bug 585715)  r=bzbarsky  a2.0=blocking2.0:beta6
UltraBlame original commit: d8e37eb0c77cd85b2c1d58116e72ff76e63969c0

--- a/layout/style/test/test_value_computation.html
+++ b/layout/style/test/test_value_computation.html
@@ -456,6 +456,12 @@ before
 avoid
 "
 ]
+}
+;
+var
+gBadComputedNoFrame
+=
+{
 /
 /
 These
@@ -549,25 +555,6 @@ topright
 %
 "
 ]
-/
-/
-These
-are
-probably
-bogus
-tests
-.
-.
-.
-(
-why
-not
-just
-when
-no
-frame
-?
-)
 "
 -
 moz
@@ -628,22 +615,6 @@ start
 %
 "
 ]
-}
-;
-var
-gBadComputedNoFrame
-=
-{
-/
-/
-These
-are
-probably
-bogus
-tests
-.
-.
-.
 "
 margin
 "
@@ -1957,6 +1928,92 @@ property
 )
 ;
 }
+/
+/
+FIXME
+:
+Something
+(
+maybe
+with
+the
+-
+moz
+-
+binding
+values
+)
+causes
+/
+/
+gElementF
+'
+s
+frame
+to
+get
+lost
+.
+Force
+it
+to
+get
+recreated
+after
+/
+/
+each
+property
+.
+gElementF
+.
+parentNode
+.
+style
+.
+display
+=
+"
+none
+"
+;
+get_computed_value
+(
+getComputedStyle
+(
+gElementF
+"
+"
+)
+"
+width
+"
+)
+;
+gElementF
+.
+parentNode
+.
+style
+.
+display
+=
+"
+"
+;
+get_computed_value
+(
+getComputedStyle
+(
+gElementF
+"
+"
+)
+"
+width
+"
+)
+;
 }
 function
 test_property
