--- a/layout/style/test/test_value_computation.html
+++ b/layout/style/test/test_value_computation.html
@@ -476,6 +476,251 @@ tests
 -
 moz
 -
+border
+-
+radius
+"
+:
+[
+"
+0
+%
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+"
+-
+moz
+-
+calc
+(
+0px
+)
+-
+moz
+-
+calc
+(
+0pt
+)
+-
+moz
+-
+calc
+(
+0
+%
+)
+-
+moz
+-
+calc
+(
+0em
+)
+"
+]
+"
+-
+moz
+-
+border
+-
+radius
+-
+bottomleft
+"
+:
+[
+"
+0
+%
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+]
+"
+-
+moz
+-
+border
+-
+radius
+-
+bottomright
+"
+:
+[
+"
+0
+%
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+]
+"
+-
+moz
+-
+border
+-
+radius
+-
+topleft
+"
+:
+[
+"
+0
+%
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+]
+"
+-
+moz
+-
+border
+-
+radius
+-
+topright
+"
+:
+[
+"
+0
+%
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+]
+"
+-
+moz
+-
+margin
+-
+end
+"
+:
+[
+"
+0
+%
+"
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+]
+"
+-
+moz
+-
+margin
+-
+start
+"
+:
+[
+"
+0
+%
+"
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+]
+"
+-
+moz
+-
 outline
 -
 radius
@@ -485,6 +730,48 @@ radius
 "
 0
 %
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+"
+-
+moz
+-
+calc
+(
+0px
+)
+-
+moz
+-
+calc
+(
+0pt
+)
+-
+moz
+-
+calc
+(
+0
+%
+)
+-
+moz
+-
+calc
+(
+0em
+)
 "
 ]
 "
@@ -503,6 +790,17 @@ bottomleft
 0
 %
 "
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
 ]
 "
 -
@@ -519,6 +817,17 @@ bottomright
 "
 0
 %
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
 "
 ]
 "
@@ -537,6 +846,17 @@ topleft
 0
 %
 "
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
 ]
 "
 -
@@ -554,35 +874,16 @@ topright
 0
 %
 "
-]
 "
 -
 moz
 -
-margin
+calc
+(
 -
-end
-"
-:
-[
-"
-0
+1
 %
-"
-]
-"
--
-moz
--
-margin
--
-start
-"
-:
-[
-"
-0
-%
+)
 "
 ]
 "
@@ -599,6 +900,29 @@ end
 0
 %
 "
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
 ]
 "
 -
@@ -613,6 +937,29 @@ start
 "
 0
 %
+"
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
 "
 ]
 "
@@ -639,6 +986,18 @@ bottom
 0
 %
 "
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
 ]
 "
 margin
@@ -650,6 +1009,18 @@ left
 "
 0
 %
+"
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
 "
 ]
 "
@@ -663,6 +1034,18 @@ right
 0
 %
 "
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
 ]
 "
 margin
@@ -674,6 +1057,56 @@ top
 "
 0
 %
+"
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+]
+"
+min
+-
+height
+"
+:
+[
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
+]
+"
+min
+-
+width
+"
+:
+[
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
 "
 ]
 "
@@ -688,6 +1121,39 @@ padding
 0em
 0pt
 "
+"
+-
+moz
+-
+calc
+(
+0
+)
+-
+moz
+-
+calc
+(
+0em
+)
+-
+moz
+-
+calc
+(
+-
+2px
+)
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
 ]
 "
 padding
@@ -699,6 +1165,29 @@ bottom
 "
 0
 %
+"
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
 "
 ]
 "
@@ -712,6 +1201,29 @@ left
 0
 %
 "
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
 ]
 "
 padding
@@ -724,6 +1236,29 @@ right
 0
 %
 "
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
+"
 ]
 "
 padding
@@ -735,6 +1270,29 @@ top
 "
 0
 %
+"
+"
+-
+moz
+-
+calc
+(
+0
+%
++
+0px
+)
+"
+"
+-
+moz
+-
+calc
+(
+-
+1
+%
+)
 "
 ]
 }
