--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -599,21 +599,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-warning
+gtk
 -
-16
-.
-png
+dialog
+-
+warning
+?
+size
+=
+menu
 "
 )
 ;
@@ -645,21 +647,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-error
+gtk
 -
-16
-.
-png
+dialog
+-
+error
+?
+size
+=
+menu
 "
 )
 ;
@@ -695,21 +699,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-information
+gtk
 -
-16
-.
-png
+dialog
+-
+info
+?
+size
+=
+menu
 "
 )
 ;
