Bug 591516 - 'IndexedDB: Add some UI to prompt for IndexedDB permissions'. r=sicking+gavin.
UltraBlame original commit: b031db65eb692aa73c292bf6d2d480a209609542

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2668,6 +2668,30 @@ box
 anchorid
 =
 "
+indexedDB
+-
+notification
+-
+icon
+"
+]
+>
+#
+indexedDB
+-
+notification
+-
+icon
+#
+notification
+-
+popup
+-
+box
+[
+anchorid
+=
+"
 addons
 -
 notification
