--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -8163,6 +8163,67 @@ height
 32px
 ;
 }
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+indexedDB
+-
+permissions
+-
+prompt
+"
+]
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+indexedDB
+-
+quota
+-
+prompt
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+question
+-
+64
+.
+png
+)
+;
+}
 #
 notification
 -
@@ -8294,6 +8355,39 @@ skin
 extensions
 /
 extensionGeneric
+-
+16
+.
+png
+)
+;
+}
+#
+indexedDB
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+question
 -
 16
 .
