--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -13684,6 +13684,67 @@ height
 32px
 ;
 }
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+indexedDB
+-
+permissions
+-
+prompt
+"
+]
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+indexedDB
+-
+quota
+-
+prompt
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+question
+-
+64
+.
+png
+)
+;
+}
 #
 notification
 -
@@ -13799,6 +13860,39 @@ skin
 extensions
 /
 extensionGeneric
+-
+16
+.
+png
+)
+;
+}
+#
+indexedDB
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+question
 -
 16
 .
