Bug 567814 - Convert Remember Password notification bar to a doorhanger notification. Initial p=frynfrankyan.com, r=dolske, a=blocking2.0
UltraBlame original commit: 6a8048ca8b63c7071bd91978086e72fea4b990b9

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2706,6 +2706,30 @@ addons
 notification
 -
 icon
+#
+notification
+-
+popup
+-
+box
+[
+anchorid
+=
+"
+password
+-
+notification
+-
+icon
+"
+]
+>
+#
+password
+-
+notification
+-
+icon
 {
 display
 :
