--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -14998,6 +14998,39 @@ png
 )
 ;
 }
+#
+password
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+passwordmgr
+/
+key
+-
+16
+.
+png
+)
+;
+}
 .
 popup
 -
@@ -15247,6 +15280,48 @@ skin
 icons
 /
 question
+-
+64
+.
+png
+)
+;
+}
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+password
+-
+save
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+passwordmgr
+/
+key
 -
 64
 .
