--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -13745,6 +13745,48 @@ png
 )
 ;
 }
+.
+popup
+-
+notification
+-
+icon
+[
+popupid
+=
+"
+password
+-
+save
+"
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+passwordmgr
+/
+key
+-
+64
+.
+png
+)
+;
+}
 #
 notification
 -
@@ -13893,6 +13935,39 @@ skin
 icons
 /
 question
+-
+16
+.
+png
+)
+;
+}
+#
+password
+-
+notification
+-
+icon
+{
+list
+-
+style
+-
+image
+:
+url
+(
+chrome
+:
+/
+/
+mozapps
+/
+skin
+/
+passwordmgr
+/
+key
 -
 16
 .
